--- a/frontend/src/Components/BillsandInsuarance/BillsandInsurance.css
+++ b/frontend/src/Components/BillsandInsuarance/BillsandInsurance.css
@@ -5,6 +5,8 @@
     width:100vw;
     justify-content: space-evenly;
     margin-top: 30px;
+    padding-left:5%;
+    padding-right:5%;
 }
 #billtext {
     text-align: center;
@@ -37,6 +39,8 @@
     height: 450px;
     justify-content:space-evenly;
     margin-top: 80px;
+    padding-left:5%;
+    padding-right:5%;
 }
 #insure {
     border-radius: 20px;
